// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`validate options should throw an error on the "esModule" option with "1" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.esModule should be a boolean."
`;

exports[`validate options should throw an error on the "hmr" option with "1" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.hmr should be a boolean."
`;

exports[`validate options should throw an error on the "publicPath" option with "true" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.publicPath should be one of these:
   string | function
   Details:
    * configuration.publicPath should be a string.
    * configuration.publicPath should be an instance of function."
`;

exports[`validate options should throw an error on the "reloadAll" option with "1" value 1`] = `
"Invalid configuration object. Object has been initialized using a configuration object that does not match the API schema.
 - configuration.reloadAll should be a boolean."
`;
